# collect

./: .env  .gitignore  .sync_cache.json  ;  CLAUDE.md  CLAUDE_DRAFT.md  GEMINI.md  LastState.md  Makefile  README.md  YOYO_CHEAT_SHEET.md  agentwork.py  anthropic_tool_use.md  api.py  bars.py  build_agent.md  collect.py  config.py  copycmds  dir_structure.md  extract_function.sh  fetchall  fetchcmds  fetcher.py  filterModel.md  initial_load.py  llmrunner.py  memory_map_files.md  movetools  prompt_service_notebook.py  prompt_templating_plan.md  pyproject.toml  requirements.txt  secret_manager.py  simple_agent.md  source.xml  sync_commands.py  synctools  test_bars.py  test_collect.py  (+15 more)
.claude/: settings.local.json
_docs/: project-overview.md
agents/: tools.py
api/: __init__.py  prompt_api.py  prompt_api_models.py
data/: collect.db  plans.db  prompts.db  test_plans.db  test_prompts.db
dotfiles/: .zshrc
featurework/: fastapi_mcp_discovery.md
migrations/: 20250105_01_add_projects_support.py  20250105_01_add_projects_support_rollback.sql  20250706_01_sPVrY-create_prompts_table.sql  20250725_01_drop-prompts-table.sql  20250727_01_create-prompt-tables.sql  20250810_01_add-projects-table.sql  20250810_02_add-github-url-to-prompt-history.sql
migrations-plans/: 20250713_01_create_plans_tables.sql  20250713_02_update_plan_indexes.sql
models/: __init__.py  anthropic_mpc.py  anthropic_prompt_generate.py  anthropic_prompt_improve.py  anthropic_prompt_templatize.py  gemini_mcp.py  openai_mpc.py  test_anthropic_mcp.py  test_gemini_mcp.py  test_openai_mcp.py  test_xai_mcp.py  test_youtube.py  xai_mcp.py  youtube.py  youtube_models.py  youtube_prompt.md
notebooks/: loader_testing.py  prompt_service_notebook.py
plans/: test_build_worktrees.py  test_claude_sdk_processing.py  test_finalize_worktree.py  test_validate_build_environment.py  worktree.py
polygon/: polygon.py  test_polygon.py
repository/: database.py  datetime_adapters.py  plan_models.py  plan_service.py  prd_todo.md  prompt_model.py  prompt_models.py  prompt_service.py  test_database.py  test_database_setup.py  test_datetime_adapters.py  test_plan_service.py  test_prompt_service.py
research/: DSPy-Beats-Human-Prompt-Engineering.md  (+5 more)
(+132 files in other folders)
