[project]
name = "fetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.11",
    "anthropic>=0.50.0",
    "google-cloud-aiplatform[tokenization]>=1.91.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.7.1",
    "pytest>=8.3.5",
    "tiktoken>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
filterwarnings = [
    "ignore::UserWarning:google.auth._default"
]
